--- a/src/IdSvrHost/UI/SharedViews/Error.cshtml
+++ b/src/IdSvrHost/UI/SharedViews/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdSvrHost.UI.Error.ErrorViewModel
+﻿@model Host.UI.Error.ErrorViewModel
 
 @{
     var error_description = Model?.Error?.ErrorDescription ?? "Sorry, there was an unexpected error.";
