--- a/src/IdSvrHost/UI/_ViewImports.cshtml
+++ b/src/IdSvrHost/UI/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
-@addTagHelper "*, IdSvrHost"
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, IdentityServer4
